--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/dyyd/button-of-excellence#readme",
   "devDependencies": {
-    "bower": "^1.8.8"
+    "bower": ">=1.8.8"
   }
 }
